force-app/main/default/objects/Marketing_Channel_Detail__c/Marketing_Channel_Detail__c.object-meta.xml
<CustomObject>
    <label>Marketing Channel Detail</label>
    <nameField>
        <displayFormat>HW-{0000000}</displayFormat>
        <label>How Market ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Channel Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>