force-app/main/default/objects/Marketing_Channel_Detail__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Channel Details (Customers)</relationshipLabel>
    <relationshipName>Marketing_Channel_Details</relationshipName>
    <type>Lookup</type>
</CustomField>