force-app/main/default/objects/Marketing_Channel_Detail__c/fields/HowMarket__c.field-meta.xml
<CustomField>
    <fullName>HowMarket__c</fullName>
    <label>HowMarket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bead Buying Group</fullName>
            </value>
            <value>
                <fullName>Booth &amp; Tables</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
            <value>
                <fullName>B to B</fullName>
            </value>
            <value>
                <fullName>Non-Selling</fullName>
            </value>
            <value>
                <fullName>Online/Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>