force-app/main/default/objects/Marketing_Channel_Detail__c/fields/HowMarketDetail__c.field-meta.xml
<CustomField>
    <fullName>HowMarketDetail__c</fullName>
    <label>How Market Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>HowMarket__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Art Shows</fullName>
            </value>
            <value>
                <fullName>Fairs</fullName>
            </value>
            <value>
                <fullName>Home Parties</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Teaching</fullName>
            </value>
            <value>
                <fullName>Bead Shop</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Sales Reps</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Charity Donations</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Gifting</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Ebay</fullName>
            </value>
            <value>
                <fullName>Etsy</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Other Ecom</fullName>
            </value>
            <value>
                <fullName>Own Website</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Pinterest</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Tik Tok</fullName>
            </value>
            <value>
                <fullName>Bead Buying Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>