force-app/main/default/objects/Marketing_Channel_Detail__c/fields/HowMarketID__c.field-meta.xml
<CustomField>
    <fullName>HowMarketID__c</fullName>
    <label>HowMarketID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>