force-app/main/default/objects/Marketing_Channel_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HowMarketDetail__c</columns>
    <columns>HowMarket__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>